fluxcd/apps/base/media/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: media
  labels:
    enable-backup: "true"
  annotations:
    linkerd.io/inject: enabled
