fluxcd/apps/base/media/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: media-public
spec:
  podSelector:
    matchExpressions:
    - key: app.kubernetes.io/name
      operator: In
      values:
      - feishin
      - jellyfin
      - jellyseerr
      - jf-vue
      - tachidesk
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: ingress-nginx-public
    ports:
    - port: 80
      protocol: TCP
    - port: 4567
      protocol: TCP
    - port: 5055
      protocol: TCP
    - port: 8096
      protocol: TCP
    - port: 9180
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: media-authentik
spec:
  podSelector:
    matchExpressions:
    - key: app.kubernetes.io/name
      operator: In
      values:
      - prowlarr
      - radarr
      - radarr4
      - sonarr
      - sonarr4
      - torrent
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: authentik
      podSelector:
        matchLabels:
          goauthentik.io/outpost-name: proxy-outpost
    ports:
    - port: 7878
      protocol: TCP
    - port: 8080
      protocol: TCP
    - port: 8989
      protocol: TCP
    - port: 9696
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: media-metrics
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: monitoring
      podSelector:
        matchLabels:
          app.kubernetes.io/name: vmagent
    ports:
    - port: 8096
      protocol: TCP
    - port: 9707
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: media-internet
spec:
  podSelector:
    matchExpressions:
    - key: app.kubernetes.io/name
      operator: In
      values:
      - jellyfin
      - jellyseerr
      - prowlarr
      - radarr
      - radarr4
      - sonarr
      - sonarr4
      - tachidesk
  policyTypes:
  - Egress
  egress:
  - to:
    - ipBlock:
        cidr: 0.0.0.0/0
        except:
        - 10.0.0.0/8
        - 172.16.0.0/12
        - 192.168.0.0/16
        - 100.64.0.0/10
        - 169.254.0.0/16
    ports:
    - port: 80
      protocol: TCP
    - port: 443
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: jellyseerr
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: jellyseerr
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: ingress-nginx-public
    ports:
    - port: 443
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: torrent
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: torrent
  policyTypes:
  - Egress
  egress:
  - to:
    - ipBlock:
        cidr: 0.0.0.0/0
        except:
        - 10.0.0.0/8
        - 172.16.0.0/12
        - 192.168.0.0/16
        - 100.64.0.0/10
        - 169.254.0.0/16
    ports:
    - port: 1637
      protocol: UDP
    - port: 443
      protocol: TCP
